--- a/assets/css/tailwind.postcss
+++ b/assets/css/tailwind.postcss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&family=Open+Sans:wght@400;500;700&display=swap");
+
 :root {
     --primary: hsl(0, 0%, 88%);
     --background: hsl(240deg 3% 13%);
